MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Account_Name_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_in_Arabic__c</fullName>
    <formula>IF(
    IsPersonAccount,
    IF(
        NOT(ISBLANK(AccountnameArabic__pc)),
        AccountnameArabic__pc,
        AccountnameArabic__c
    ),
    AccountnameArabic__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name in Arabic</label>
    <type>Text</type>
</CustomField>