MODON MRE BPDEV/force-app/main/default/objects/Account/fields/AddressArabic__c.field-meta.xml
<CustomField>
    <fullName>AddressArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>