MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>