MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Agency_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Agency_Status_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Status Reason</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>