MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>