MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Bank_Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank Branch Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>