MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Beneficiary Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>