MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Broker_Classification__c.field-meta.xml
<CustomField>
    <fullName>Broker_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Classification</label>
    <referenceTo>Broker_Classification__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>