MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Classification_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Classification_Level_1__c</fullName>
    <label>Classification Level 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Royal</fullName>
            </value>
            <value>
                <fullName>Titled Individual</fullName>
            </value>
            <value>
                <fullName>Government Account</fullName>
            </value>
            <value>
                <fullName>UAE Business Leader</fullName>
            </value>
            <value>
                <fullName>Celebrity</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>