MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Classification_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Classification_Level_2__c</fullName>
    <formula>IF( ISPICKVAL( PersonLeadSource, &quot;Management Lead&quot; ),
    &quot;Management Referral&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classification Level 2</label>
    <type>Text</type>
</CustomField>