MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Classification_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Classification_Level_3__c</fullName>
    <label>Classification Level 3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modon Employee</fullName>
            </value>
            <value>
                <fullName>Modon Group Employee</fullName>
            </value>
            <value>
                <fullName>Government Employee</fullName>
            </value>
            <value>
                <fullName>POD</fullName>
            </value>
            <value>
                <fullName>Senior Citizen</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>