MODON MRE BPDEV/force-app/main/default/objects/Account/fields/ClassificationSalesAmount__c.field-meta.xml
<CustomField>
    <fullName>ClassificationSalesAmount__c</fullName>
    <label>Classification Sales Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>