MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Company_Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Company_Country_Of_Origin__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Country Of Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>