MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Company_Name_as_per_Trade_License__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_as_per_Trade_License__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name as per Trade License</label>
    <type>TextArea</type>
</CustomField>