MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Company_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Tax_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Tax Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>