MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <description>This field will contain company type for Organization type account.</description>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>