MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Customer_Segemnt_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segemnt_Group__c</fullName>
    <formula>IF(
    OR(
        Customer_Segmentation__c = &quot;Premier&quot;,
        Customer_Segmentation__c = &quot;Privilege&quot;,
        Customer_Segmentation__c = &quot;Prestige&quot;
    ),
    &quot;Signature&quot;,
    
    IF(
        OR(
            Customer_Segmentation__c = &quot;Executive&quot;,
            Customer_Segmentation__c = &quot;Exclusive&quot;
        ),
        &quot;Elite&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment Group</label>
    <type>Text</type>
</CustomField>