MODON MRE BPDEV/force-app/main/default/objects/Account/fields/DateOfEstablishment__c.field-meta.xml
<CustomField>
    <fullName>DateOfEstablishment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Establishment</label>
    <type>Date</type>
</CustomField>