MODON MRE BPDEV/force-app/main/default/objects/Account/fields/DeliveryChannel__c.field-meta.xml
<CustomField>
    <fullName>DeliveryChannel__c</fullName>
    <label>Delivery Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Face to face interaction</fullName>
            </value>
            <value>
                <fullName>Intermediaries / sources through 3rd party / broker</fullName>
            </value>
            <value>
                <fullName>No Agents Involved</fullName>
            </value>
            <value>
                <fullName>Non Face to face meeting</fullName>
            </value>
            <value>
                <fullName>Direct Sales Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>