MODON MRE BPDEV/force-app/main/default/objects/Account/fields/DocuSignStatus__c.field-meta.xml
<CustomField>
    <fullName>DocuSignStatus__c</fullName>
    <label>Docu Sign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>