MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Downgrade_Warning_Date__c.field-meta.xml
<CustomField>
    <fullName>Downgrade_Warning_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Downgrade Warning Date</label>
    <type>Date</type>
</CustomField>