MODON MRE BPDEV/force-app/main/default/objects/Account/fields/EBS_BANK_SYNC_STATUS__c.field-meta.xml
<CustomField>
    <fullName>EBS_BANK_SYNC_STATUS__c</fullName>
    <label>EBS BANK SYNC STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>