MODON MRE BPDEV/force-app/main/default/objects/Account/fields/EBS_Supplier_Response__c.field-meta.xml
<CustomField>
    <fullName>EBS_Supplier_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS Supplier Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>