MODON MRE BPDEV/force-app/main/default/objects/Account/fields/EBS_VENDOR_PARTY_ID__c.field-meta.xml
<CustomField>
    <fullName>EBS_VENDOR_PARTY_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS VENDOR PARTY ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>