MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Egypt_Date_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Date_of_Establishment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Establishment</label>
    <type>Date</type>
</CustomField>