MODON MRE BPDEV/force-app/main/default/objects/Account/fields/EmailID__c.field-meta.xml
<CustomField>
    <fullName>EmailID__c</fullName>
    <formula>LEFT(PersonEmail, 2) &amp;&quot;*********&quot; &amp; RIGHT(PersonEmail, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>