MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Event_Attended__c.field-meta.xml
<CustomField>
    <fullName>Event_Attended__c</fullName>
    <label>Event Attended</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Muheira Sales Launch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>