MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Formaul_Number__c.field-meta.xml
<CustomField>
    <fullName>Formaul_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Formula Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>