MODON MRE BPDEV/force-app/main/default/objects/Account/fields/IncludeInMarketingJourney__c.field-meta.xml
<CustomField>
    <fullName>IncludeInMarketingJourney__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this record should be included in marketing automation journeys. When checked, the record becomes eligible for synchronization with Marketing Cloud or other marketing workflows. Use this flag to control audience segmentation and journey enrollment criteria.</description>
    <label>Include in Marketing Journey</label>
    <type>Checkbox</type>
</CustomField>