MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Isduplicate__c.field-meta.xml
<CustomField>
    <fullName>Isduplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Isduplicate</label>
    <type>Checkbox</type>
</CustomField>