MODON MRE BPDEV/force-app/main/default/objects/Account/fields/KYC_File_Id__c.field-meta.xml
<CustomField>
    <fullName>KYC_File_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KYC File Id</label>
    <length>29</length>
    <type>Text</type>
</CustomField>