MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Last_Bank_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Bank_Reminder_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Bank Reminder Date</label>
    <type>Date</type>
</CustomField>