MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Licensing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Licensing Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>