MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Manual_KYC_Comment__c.field-meta.xml
<CustomField>
    <fullName>Manual_KYC_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manual KYC Comment</label>
    <type>TextArea</type>
</CustomField>