MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Merge_Comment__c.field-meta.xml
<CustomField>
    <fullName>Merge_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Merge Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>