MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Not_Required_Multidocument_Auth_UAE__c.field-meta.xml
<CustomField>
    <fullName>Not_Required_Multidocument_Auth_UAE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Required Multidocument Auth - UAE</label>
    <type>Checkbox</type>
</CustomField>