MODON MRE BPDEV/force-app/main/default/objects/Account/fields/OIC_BANK_BRANCH_PARTY_ID__c.field-meta.xml
<CustomField>
    <fullName>OIC_BANK_BRANCH_PARTY_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIC BANK BRANCH PARTY ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>