MODON MRE BPDEV/force-app/main/default/objects/Account/fields/OIC_SUPPLIER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>OIC_SUPPLIER_NUMBER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIC SUPPLIER NUMBER</label>
    <length>20</length>
    <type>Text</type>
</CustomField>