MODON MRE BPDEV/force-app/main/default/objects/Account/fields/OIC_Supplier_Response__c.field-meta.xml
<CustomField>
    <fullName>OIC_Supplier_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIC Supplier Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>