MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Oracle_Customer_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Customer_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Customer Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>