MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Oracle_Integration_Status_Modon_Egypt__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Integration_Status_Modon_Egypt__c</fullName>
    <label>Oracle Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>