MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Oracle_Status_Code_Modon_Egypt__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Status_Code_Modon_Egypt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Integration Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>