MODON MRE BPDEV/force-app/main/default/objects/Account/fields/OraclePartyId__c.field-meta.xml
<CustomField>
    <fullName>OraclePartyId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Party Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>