MODON MRE BPDEV/force-app/main/default/objects/Account/fields/OtherSourceOfIncome__c.field-meta.xml
<CustomField>
    <fullName>OtherSourceOfIncome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Source of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>