MODON MRE BPDEV/force-app/main/default/objects/Account/fields/PO_Box_Emirate__c.field-meta.xml
<CustomField>
    <fullName>PO_Box_Emirate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PO Box – Emirate</label>
    <type>TextArea</type>
</CustomField>