MODON MRE BPDEV/force-app/main/default/objects/Account/fields/POAPlaceofIssuance__c.field-meta.xml
<CustomField>
    <fullName>POAPlaceofIssuance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Place of Issuance</label>
    <length>200</length>
    <type>Text</type>
</CustomField>