MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Proposed_Bank_Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Bank_Branch_Type__c</fullName>
    <label>Proposed Bank Branch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SWIFT</fullName>
            </value>
            <value>
                <fullName>CHIPS</fullName>
            </value>
            <value>
                <fullName>ABA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>