MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Proposed_Trade_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Trade_License_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Trade License Expiry</label>
    <type>Date</type>
</CustomField>