MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Proposed_Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Trade_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Trade License Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>