MODON MRE BPDEV/force-app/main/default/objects/Account/fields/Proposed_VAT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_VAT_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed VAT Start Date</label>
    <type>Date</type>
</CustomField>